[gd_scene load_steps=3 format=3 uid="uid://f85s2avde6r4"]

[ext_resource type="Script" uid="uid://cwe7mqy3660df" path="res://logic/lobby.gd" id="1"]
[ext_resource type="Theme" uid="uid://c60exinomkert" path="res://PINPongMainTheme.tres" id="1_xrgmn"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource("1_xrgmn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_top = 48.0
offset_right = 224.0
offset_bottom = 104.0
grow_horizontal = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 56
text = "PIN Pong"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LobbyPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -72.0
offset_right = 110.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1")

[node name="PinLabel" type="Label" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 13.0
offset_right = 186.0
offset_bottom = 36.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "ATM PIN:"

[node name="Pin" type="LineEdit" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 48.0
offset_right = 210.0
offset_bottom = 79.0
size_flags_horizontal = 2
size_flags_vertical = 2
placeholder_text = "XXXX"

[node name="IPAddressLabel" type="Label" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 99.0
offset_right = 186.0
offset_bottom = 122.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP Address:"

[node name="Address" type="LineEdit" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 132.0
offset_right = 210.0
offset_bottom = 163.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="HostButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 170.0
offset_right = 90.0
offset_bottom = 201.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="JoinButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 130.0
offset_top = 170.0
offset_right = 210.0
offset_bottom = 201.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="StatusOk" type="Label" parent="LobbyPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -186.0
offset_top = 9.0
offset_right = 186.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="StatusFail" type="Label" parent="LobbyPanel"]
modulate = Color(1, 0.427451, 0.345098, 1)
layout_mode = 0
offset_left = 10.0
offset_top = 194.0
offset_right = 210.0
offset_bottom = 217.0
size_flags_horizontal = 2
size_flags_vertical = 0
horizontal_alignment = 1

[node name="PortForward" type="Label" parent="LobbyPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = 91.0
offset_right = 25.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
text = "If you want non-LAN clients to connect,
make sure the port 8910 in UDP
is forwarded on your router."

[node name="FindPublicIP" type="LinkButton" parent="LobbyPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 61.0
offset_top = 118.0
offset_right = 269.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
text = "Find your public IP address"

[connection signal="pressed" from="LobbyPanel/HostButton" to="LobbyPanel" method="_on_host_pressed"]
[connection signal="pressed" from="LobbyPanel/JoinButton" to="LobbyPanel" method="_on_join_pressed"]
[connection signal="pressed" from="LobbyPanel/FindPublicIP" to="LobbyPanel" method="_on_find_public_ip_pressed"]
